--- a/style.css
+++ b/style.css
@@ -52,7 +52,17 @@ li,
     justify-content: space-between;
     padding-left: 10px;
     align-items: center;
-    
+}
+
+.lz, .rpch-1{
+    margin: 20px;
+    padding: 0;
+}
+
+.logo {
+    position: relative;
+    float: right;
+    margin-top: -120px;
 }
 
 
@@ -182,11 +192,18 @@ footer {
     height: 50px;
 }
 
-@media (max-width: 500px) {
-    .logo, .rpch-1, .menu {
-        display: flex;
+@media (max-width: 540px) {
+    .logo img{
+        position: relative;
+        width: 100px;
+        height: 50px;
+        float: left;
+        margin-right: 200px;
+        margin-left: 200px;
+        margin-top: -70px;
     }
 } 
+
 
 
 
