--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ header nav {
     height: 50px;
 }
 
-header,
-main,
-footer {
-    background-image: url(img/rail.jpg);
-    background-size: cover;
-    background-position: center;
-}
+/*header,*/
+/*main,*/
+/*footer {*/
+    /*background-image: url(img/rail.jpg);*/
+    /*background-size: cover;*/
+    /*background-position: center;*/
+/*}*/
 
 nav,
 ul,
@@ -134,10 +134,7 @@ section {
 }
 
 .bestworker {
-
-    display: flex;
-    margin-right: 20px;
-    float: right;
+    text-align: center;
 }
 
 form {
@@ -190,6 +187,11 @@ footer {
 .social img{
     width: 50px;
     height: 50px;
+}
+
+section {
+    display: flex;
+    flex: 1;
 }
 
 @media (max-width: 540px) {
